# graphlib

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md
.agents/skills/cross-platform/: SKILL.md
.agents/skills/image-tests/: SKILL.md
.agents/skills/mpl-parity/: SKILL.md
.agents/skills/new-artist/: SKILL.md
.agents/skills/new-backend/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: BASELINES.md  CMakeLists.txt  bench_render.cpp  check_thresholds.py
cmake/: EmbedResource.cmake  MakeConformance.cmake  MakeGallery.cmake  graphlibConfig.cmake.in  version.hpp.in
docs/: DESIGN.md  Doxyfile.in  PARITY.md
docs/decisions/: ADR-0001-language-and-toolchain.md  ADR-0002-rendering-stack.md  API-REVIEW-1.0.md
docs/site/: index.html  quickstart.html  site.css
examples/: 01_hello_lines.cpp  02_color_cycle.cpp  03_fmt_and_markers.cpp  04_limits_grid.cpp  05_scatter.cpp  06_legend.cpp  07_bar_hist.cpp  08_subplots_dashboard.cpp  09_log_scales.cpp  10_styles_gallery.cpp  11_heatmap_colorbar.cpp  12_contour_gaussian.cpp  13_pcolormesh.cpp  14_scatter_cmap.cpp  15_interactive_signal.cpp  16_live_sine.cpp  17_annotations.cpp  18_dates.cpp  19_mathtext.cpp  20_paper_figure.cpp  21_perf.cpp  CMakeLists.txt
include/graphlib/: animation.hpp  artist.hpp  axes.hpp  axis.hpp  collections.hpp  color.hpp  colormaps.hpp  contour.hpp  dates.hpp  errors.hpp  events.hpp  figure.hpp  graphics_context.hpp  graphlib.hpp  gridspec.hpp  image.hpp  legend.hpp  lines.hpp  markers.hpp  patches.hpp  path.hpp  pyplot.hpp  rc.hpp  style.hpp  text.hpp  ticker.hpp  transforms.hpp  util.hpp
include/graphlib/backend/: agg.hpp  interactive.hpp  pdf.hpp  renderer.hpp  svg.hpp
ports/graphlib/: portfile.cmake  vcpkg.json
src/backends/agg/: agg_renderer.cpp
src/backends/glfw/: glfw_canvas.cpp  show_stub.cpp
src/backends/pdf/: pdf_renderer.cpp
src/backends/svg/: svg_renderer.cpp
src/core/: annotate.cpp  annotate.hpp  axes.cpp  axis.cpp  collections.cpp  color.cpp  colormap_luts.inc  colormaps.cpp  contour.cpp  css4_colors.inc  dates.cpp  events.cpp  figure.cpp  fmt.hpp  graphics_context.cpp  gridspec.cpp  image.cpp  legend.cpp  lines.cpp  marker_paths.inc  markers.cpp  patches.cpp  path.cpp  path_simplify.cpp  path_simplify.hpp  pyplot.cpp  rc.cpp  renderer.cpp  tab_base_colors.inc  text.cpp  ticker.cpp  transforms.cpp  warn.hpp
src/text/: font_manager.cpp  font_manager.hpp  mathtext.cpp  mathtext.hpp  mathtext_tables.inc  stb_impl.cpp
tests/: CMakeLists.txt
tests/fixtures/: annotate_arrows.json  autoscale.json  axis_ticks.json  bar_autoscale.json  colormap_samples.json  colors.json  date_ticks.json  fixtures.inc  generate.py  hist_bins.json  log_ticks.json  minor_ticks.json  norm_cases.json  offset_labels.json  path_simplify.json  ticker_raw.json
tests/image/: conformance_scene.hpp  pdf_golden.cpp  png_golden.cpp  stb_image_impl.cpp  svg_golden.cpp
tests/interactive/: smoke.cpp
tests/package/: CMakeLists.txt  main.cpp
tests/unit/: test_annotate.cpp  test_axes.cpp  test_color.cpp  test_colormaps.cpp  test_dates.cpp  test_events_nav.cpp  test_fills_spans.cpp  test_imshow.cpp  test_log_minor.cpp  test_mathtext.cpp  test_offset_formatter.cpp  test_patches_bar.cpp  test_path.cpp  test_path_simplify.cpp  test_rc.cpp  test_scatter_legend.cpp  test_text_metrics.cpp  test_ticker.cpp  test_transforms.cpp
tools/: gen_tables.py  mpl_twins.py
